@@ -6,12 +6,12 @@ This is my second attempt at a perl interface to WN.  This draft
 includes full support for all parts of WordNet (nouns, verbs,
 adjectives and adverbs) and is very efficient after the initialization
 step (where index and morph. exc. files are loaded).  This
-initialization step will prove to be annoying if simply want to 'play'
-with WordNet.  On my PII/400, it takes about 15 seconds and 16 megs of
-memory to initialize.  After that, however, things are blazingly fast
-and efficient.  I haven't done any tests, but all file access is done
-with fseek calls and takes full advantage of the static nature of the
-WordNet data.* files.
+initialization step will prove to be annoying if you simply want to
+'play' with WordNet.  On my PII/400, it takes about 15 seconds and 16
+megs of memory to initialize.  After that, however, things should be
+blazingly fast and efficient.  All file access is done with fseek
+calls and takes full advantage of the static nature of the WordNet
+data.* files.
 
 See the man page ('perldoc WordNet::QueryData' after having run
 'make') for information on all that is possible.
@@ -35,6 +35,10 @@ perl Makefile.PL
 make
 make test
 
+Before running 'make test', you may need to modify test.pl to indicate
+the correct location of the WordNet 'dict' directory.  The default
+location is /usr/local/dict.
+
 To install do:
 
 make install
@@ -42,7 +46,7 @@ make install
 DOCUMENTATION
 -------------
 
-The included man page (do 'perldoc WordNet::Query' to extract) should
+The included man page (do 'perldoc WordNet::QueryData' to extract) should
 give you a good idea of how to use this module and what it is good
 for.
 
